--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,18 +2,17 @@ version: "3"
 
 services:
   app:
-    container_name: docker-node-mongo
-    restart: always
+    container_name: nodejs-app
     build: .
     ports:
-      - '8081:3000'
+      - '3031:3000'
     volumes:
       - .:/usr/src/app
     links:
       - mongo
   
   mongo:
-    container_name: mongo
+    container_name: nodejs-mongodb
     image: mongo
     ports:
       - '27017:27017'
