--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Node.js with unit test",
   "main": "main.js",
   "scripts": {
+    "test": "istanbul cover _mocha tests/*.spec.js",
     "start": "node main.js"
   },
   "author": "",
@@ -12,6 +13,10 @@
     "body-parser": "^1.19.0",
     "ejs": "^2.6.2",
     "express": "^4.17.1",
+    "method-override": "^3.0.0",
     "mongoose": "^5.6.10"
+  },
+  "devDependencies": {
+    "sinon": "^7.5.0"
   }
 }
