--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "nodejs-unit-test",
   "version": "1.0.0",
-  "description": "Node.js with unit test",
+  "description": "Node.js Unit Test",
   "main": "main.js",
   "scripts": {
-    "test": "istanbul cover _mocha tests/*.spec.js",
+    "test": "jest",
+    "mochatest": "_mocha tests/*.spec.js",
     "start": "node main.js"
   },
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "body-parser": "^1.19.0",
     "ejs": "^2.6.2",
@@ -17,6 +18,7 @@
     "mongoose": "^5.6.10"
   },
   "devDependencies": {
+    "jest": "^24.9.0",
     "sinon": "^7.5.0"
   }
 }
